# Open-Mars-Colonization-Simulator

./: .gitignore  CMakeLists.txt  LICENSE.txt  Open Mars Colonization Simulator.sln  README.md
Game/: Game.vcxproj  Game.vcxproj.filters
src/core/: main.cpp
src/entities/: Enums.h  Inventory.cpp  Inventory.h  MaterialType.h  Pipe.cpp  Pipe.h  PipeNetwork.cpp  PipeNetwork.h  Structure.cpp  Structure.h
src/player/: Gui.cpp  Gui.h  InputManager.cpp  InputManager.h  StartScreen.cpp  StartScreen.h
src/rendering/: GameCamera.cpp  GameCamera.h  TextureManager.h  renderer.cpp  renderer.h
src/resources/: Tile_0000.psd  ice_melter.psd  ice_melter_unfisnished.psd  panele.psd  water magazine.psd
src/resources/FilesToAtlasMapper/: main.py
src/resources/FilesToAtlasMapper/Pipes/no_rust/: new folder
src/resources/FilesToAtlasMapper/Tiles/: tiles
src/resources/Tiles/tilepreview1/: tiles
src/structures/: IceMelter.h  SolarPanel.cpp  SolarPanel.h  WaterMagazine.h
src/utils/: Math.h  PerlinNoise.cpp  PerlinNoise.h  SaveSystem.cpp  SaveSystem.h
src/world/: Map.cpp  Tile.cpp  World.cpp  World.h  WorldGenSettings.h  map.h  structure.h  tile.h
